# college-scorecard-terraform-ndixon

./: .gitignore  .pre-commit-config.yaml  .synk  Makefile  README.md  pyproject.toml
.circleci/: config.yml
terraform/: main.tf  outputs.tf  terraform.tfvars  variables.tf
